--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
-# cargo
-
-# [[file:~/Workspace/Programming/guts/guts.note::*cargo][cargo:1]]
 [package]
-name = "guts"
-version = "0.0.6"
+name = "gchemol-gut"
+version = "0.0.7"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
+description = "Selected utilities for Rust development"
+homepage = "https://github.com/gchemol/gut"
+repository = "https://github.com/gchemol/gut"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 # core utils
@@ -25,4 +26,3 @@ exitfailure = "0.5"
 rayon = "1"
 
 [dev-dependencies]
-# cargo:1 ends here
