--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gchemol-gut"
-version = "0.0.8"
+version = "0.1.0"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 description = "Selected utilities for Rust development"
@@ -14,11 +14,11 @@ serde = {version="1", features = ["derive"]}
 anyhow = "1"                    # better than failure
 itertools = "0.8"
 # logging
-log = "^0.4"
+log = "0.4"
 pretty_env_logger = "0.4"
 # configuration
 toml = "0.5"
-lazy_static = "1.3"
+lazy_static = "1"
 # command line
 structopt = "0.3"
 # parallel
