--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gchemol-gut"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 description = "Selected utilities for Rust development"
@@ -15,6 +15,7 @@ anyhow = "1"                    # better than failure
 itertools = "0.8"
 # logging
 log = "0.4"
+env_logger = "0.7"
 pretty_env_logger = "0.4"
 # configuration
 toml = "0.5"
