--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gchemol-gut"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2018"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 description = "Selected utilities for Rust development"
@@ -22,6 +22,7 @@ toml = "0.5"
 lazy_static = "1"
 # command line
 structopt = "0.3"
+duct = "0.13"
 # parallel
 rayon = "1"
 
