--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,12 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 # core utils
 serde = {version="1", features = ["derive"]}
+serde_json = "1"
 anyhow = "1"                    # better than failure
-itertools = "0.8"
+itertools = "0.9"
 # logging
 log = "0.4"
-env_logger = "0.7"
+env_logger = "0.8"
 pretty_env_logger = "0.4"
 # configuration
 toml = "0.5"
