--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT OR Apache-2.0"
 serde = {version="1", features = ["derive"]}
 serde_json = "1"
 anyhow = "1"                    # better than failure
-itertools = "0.9"
+itertools = "0.10"
 # logging
 log = "0.4"
 env_logger = "0.9"
@@ -23,7 +23,7 @@ lazy_static = "1"
 # command line
 structopt = "0.3"
 duct = "0.13"
-clap = "3.0.0-beta.5"
+clap = {version="3.0.0-rc.7", features = ["derive"]}
 tempfile = "3"
 # parallel
 rayon = "1"
