--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Wenping Guo <ybyygu@gmail.com>"]
 description = "Selected utilities for Rust development"
 homepage = "https://github.com/gchemol/gut"
 repository = "https://github.com/gchemol/gut"
-license-file = "LICENSE"
+license = "MIT"
 
 [dependencies]
 # core utils
