--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "gchemol-gut"
-version = "0.4.1"
+version = "0.4.2"
 edition = "2021"
 authors = ["Wenping Guo <ybyygu@gmail.com>"]
 description = "Selected utilities for Rust development"
@@ -28,6 +28,7 @@ tempfile = "3"
 # parallel
 rayon = "1"
 shell-escape = "0.1"
+time = "0.3.17"
 
 [dev-dependencies]
 
